--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
     <Button
         android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/button_drums"
-		android:onClick="drumsClick" />
+		android:text="@string/button_start"
+		android:onClick="startClick" />
     <Button
         android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
